	PR tree-optimization/20920 	* tree-pretty-print.c (dump_generic_node): Show '(ab)' if an 	SSA_NAME flows through an abnormal edge. 	* tree-vrp.c (infer_value_range): Ignore SSA names that flow 	through abnormal edges. 	(maybe_add_assert_expr): Likewise.

PR tree-optimization/20920
	* g++.dg/tree-ssa/pr20920.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97971 138bc75d-0d04-0410-961f-82ee72b054a4